; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_notes.c_note_lookup.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_notes.c_note_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i32*, i32*, i32*, i8*)* @note_lookup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @note_lookup(i32** %0, i32* %1, i32* %2, i32* %3, i8* %4) #0 {
  %6 = alloca i32**, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  store i32** %0, i32*** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  store i8* %4, i8** %10, align 8
  store i32 0, i32* %12, align 4
  store i32* null, i32** %14, align 8
  store i32* null, i32** %15, align 8
  store i32* null, i32** %16, align 8
  %17 = load i32*, i32** %9, align 8
  %18 = load i32*, i32** %7, align 8
  %19 = load i8*, i8** %10, align 8
  %20 = call i32 @find_subtree_r(i32** %16, i32* %17, i32* %18, i8* %19, i32* %12)
  store i32 %20, i32* %11, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %5
  br label %46

23:                                               ; preds = %5
  %24 = load i32*, i32** %16, align 8
  %25 = load i8*, i8** %10, align 8
  %26 = load i32, i32* %12, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds i8, i8* %25, i64 %27
  %29 = call i32 @find_blob(i32* %13, i32* %24, i8* %28)
  store i32 %29, i32* %11, align 4
  %30 = icmp slt i32 %29, 0
  br i1 %30, label %31, label %32

31:                                               ; preds = %23
  br label %46

32:                                               ; preds = %23
  %33 = load i32*, i32** %7, align 8
  %34 = call i32 @git_blob_lookup(i32** %14, i32* %33, i32* %13)
  store i32 %34, i32* %11, align 4
  %35 = icmp slt i32 %34, 0
  br i1 %35, label %36, label %37

36:                                               ; preds = %32
  br label %46

37:                                               ; preds = %32
  %38 = load i32*, i32** %8, align 8
  %39 = load i32*, i32** %14, align 8
  %40 = call i32 @note_new(i32** %15, i32* %13, i32* %38, i32* %39)
  store i32 %40, i32* %11, align 4
  %41 = icmp slt i32 %40, 0
  br i1 %41, label %42, label %43

42:                                               ; preds = %37
  br label %46

43:                                               ; preds = %37
  %44 = load i32*, i32** %15, align 8
  %45 = load i32**, i32*** %6, align 8
  store i32* %44, i32** %45, align 8
  br label %46

46:                                               ; preds = %43, %42, %36, %31, %22
  %47 = load i32*, i32** %16, align 8
  %48 = call i32 @git_tree_free(i32* %47)
  %49 = load i32*, i32** %14, align 8
  %50 = call i32 @git_blob_free(i32* %49)
  %51 = load i32, i32* %11, align 4
  ret i32 %51
}

declare dso_local i32 @find_subtree_r(i32**, i32*, i32*, i8*, i32*) #1

declare dso_local i32 @find_blob(i32*, i32*, i8*) #1

declare dso_local i32 @git_blob_lookup(i32**, i32*, i32*) #1

declare dso_local i32 @note_new(i32**, i32*, i32*, i32*) #1

declare dso_local i32 @git_tree_free(i32*) #1

declare dso_local i32 @git_blob_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
